loco-gen/tests/snapshots/db__migrations_flow.snap
---
source: loco-gen/tests/db.rs
expression: "read_to_string(test_dir.path.join(\"myapp\").join(\"schema_dump.json\")).unwrap()"
snapshot_kind: text
---
[
  {
    "sql": "CREATE TABLE \"actor_movies\" ( \"created_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"updated_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"actor_id\" integer NOT NULL, \"movie_id\" integer NOT NULL, CONSTRAINT \"idx-actor_movies-refs-pk\" PRIMARY KEY (\"actor_id\", \"movie_id\"), FOREIGN KEY (\"actor_id\") REFERENCES \"actors\" (\"id\") ON DELETE CASCADE ON UPDATE CASCADE, FOREIGN KEY (\"movie_id\") REFERENCES \"movies\" (\"id\") ON DELETE CASCADE ON UPDATE CASCADE )",
    "table": "actor_movies"
  },
  {
    "sql": "CREATE TABLE \"actors\" ( \"created_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"updated_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"id\" integer NOT NULL PRIMARY KEY AUTOINCREMENT, \"foobar\" varchar NULL )",
    "table": "actors"
  },
  {
    "sql": "CREATE TABLE \"awards\" ( \"created_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"updated_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"id\" integer NOT NULL PRIMARY KEY AUTOINCREMENT, \"name\" varchar NULL, \"actor_id\" integer NOT NULL, FOREIGN KEY (\"actor_id\") REFERENCES \"actors\" (\"id\") ON DELETE CASCADE ON UPDATE CASCADE )",
    "table": "awards"
  },
  {
    "sql": "CREATE TABLE \"movies\" ( \"created_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"updated_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"id\" integer NOT NULL PRIMARY KEY AUTOINCREMENT, \"uuid\" uuid_text NOT NULL UNIQUE, \"uuid_col\" uuid_text NULL, \"uuid_col_nonull\" uuid_text NOT NULL, \"string\" varchar NULL, \"string_nonull\" varchar NOT NULL, \"string_uniq\" varchar NOT NULL UNIQUE, \"text\" text NULL, \"text_nonull\" text NOT NULL, \"tiny_int\" tinyint NULL, \"tiny_int_nonull\" tinyint NOT NULL, \"tiny_int_uniq\" tinyint NOT NULL UNIQUE, \"small_int\" smallint NULL, \"small_int_nonull\" smallint NOT NULL, \"small_int_uniq\" smallint NOT NULL UNIQUE, \"int\" integer NULL, \"int_nonull\" integer NOT NULL, \"int_uniq\" integer NOT NULL UNIQUE, \"big_int\" bigint NULL, \"big_int_nonull\" bigint NOT NULL, \"big_int_uniq\" bigint NOT NULL UNIQUE, \"float\" float NULL, \"float_nonull\" float NOT NULL, \"double\" double NULL, \"double_nonull\" double NOT NULL, \"decimal\" real NULL, \"decimal_nonull\" real NOT NULL, \"bool\" boolean NULL, \"bool_nonull\" boolean NOT NULL, \"tstz\" timestamp_with_timezone_text, \"tstz_nonull\" timestamp_with_timezone_text NOT NULL, \"date\" date_text NULL, \"date_nonull\" date_text NOT NULL, \"ts\" timestamp_text NULL, \"ts_nonull\" timestamp_text NOT NULL, \"json\" json_text NULL, \"json_nonull\" json_text NOT NULL, \"jsonb\" jsonb_text NULL, \"jsonb_nonull\" jsonb_text NOT NULL, \"blob\" blob NULL, \"blob_nonull\" blob NOT NULL, \"money\" real_money NULL, \"money_nonull\" real_money NOT NULL, \"age\" real(8, 24) NULL, \"age_nonull\" real(8, 24) NOT NULL, \"playlist_id\" integer NOT NULL, \"rating\" integer NULL, FOREIGN KEY (\"playlist_id\") REFERENCES \"playlists\" (\"id\") ON DELETE CASCADE ON UPDATE CASCADE )",
    "table": "movies"
  },
  {
    "sql": "CREATE TABLE \"playlists\" ( \"created_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"updated_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"id\" integer NOT NULL PRIMARY KEY AUTOINCREMENT, \"uuid\" uuid_text NOT NULL UNIQUE, \"uuid_col\" uuid_text NULL, \"uuid_col_nonull\" uuid_text NOT NULL, \"string\" varchar NULL, \"string_nonull\" varchar NOT NULL, \"string_uniq\" varchar NOT NULL UNIQUE, \"text\" text NULL, \"text_nonull\" text NOT NULL, \"tiny_int\" tinyint NULL, \"tiny_int_nonull\" tinyint NOT NULL, \"tiny_int_uniq\" tinyint NOT NULL UNIQUE, \"small_int\" smallint NULL, \"small_int_nonull\" smallint NOT NULL, \"small_int_uniq\" smallint NOT NULL UNIQUE, \"int\" integer NULL, \"int_nonull\" integer NOT NULL, \"int_uniq\" integer NOT NULL UNIQUE, \"big_int\" bigint NULL, \"big_int_nonull\" bigint NOT NULL, \"big_int_uniq\" bigint NOT NULL UNIQUE, \"float\" float NULL, \"float_nonull\" float NOT NULL, \"double\" double NULL, \"double_nonull\" double NOT NULL, \"decimal\" real NULL, \"decimal_nonull\" real NOT NULL, \"bool\" boolean NULL, \"bool_nonull\" boolean NOT NULL, \"tstz\" timestamp_with_timezone_text, \"tstz_nonull\" timestamp_with_timezone_text NOT NULL, \"date\" date_text NULL, \"date_nonull\" date_text NOT NULL, \"ts\" timestamp_text NULL, \"ts_nonull\" timestamp_text NOT NULL, \"json\" json_text NULL, \"json_nonull\" json_text NOT NULL, \"jsonb\" jsonb_text NULL, \"jsonb_nonull\" jsonb_text NOT NULL, \"blob\" blob NULL, \"blob_nonull\" blob NOT NULL, \"money\" real_money NULL, \"money_nonull\" real_money NOT NULL, \"age\" real(8, 24) NULL, \"age_nonull\" real(8, 24) NOT NULL )",
    "table": "playlists"
  },
  {
    "sql": "CREATE TABLE \"seaql_migrations\" ( \"version\" varchar NOT NULL PRIMARY KEY, \"applied_at\" bigint NOT NULL )",
    "table": "seaql_migrations"
  },
  {
    "sql": "CREATE TABLE \"users\" ( \"created_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"updated_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"id\" integer NOT NULL PRIMARY KEY AUTOINCREMENT, \"pid\" uuid_text NOT NULL, \"email\" varchar NOT NULL UNIQUE, \"password\" varchar NOT NULL, \"api_key\" varchar NOT NULL UNIQUE, \"name\" varchar NOT NULL, \"reset_token\" varchar NULL, \"reset_sent_at\" timestamp_with_timezone_text NULL, \"email_verification_token\" varchar NULL, \"email_verification_sent_at\" timestamp_with_timezone_text NULL, \"email_verified_at\" timestamp_with_timezone_text NULL, \"magic_link_token\" varchar NULL, \"magic_link_expiration\" timestamp_with_timezone_text NULL )",
    "table": "users"
  }
]