loco-gen/tests/snapshots/db__migrations_flow_sqlite.snap
---
source: loco-gen/tests/db.rs
assertion_line: 133
expression: "read_to_string(tree_fs.root.join(\"myapp\").join(\"schema_dump.json\")).unwrap()"
---
[
  {
    "sql": "CREATE TABLE \"actor_movies\" ( \"minutes\" integer NULL, \"actor_id\" integer NOT NULL, \"movie_id\" integer NOT NULL, CONSTRAINT \"idx-actor_movies-refs-pk\" PRIMARY KEY (\"actor_id\", \"movie_id\"), FOREIGN KEY (\"actor_id\") REFERENCES \"actors\" (\"id\") ON DELETE CASCADE ON UPDATE CASCADE, FOREIGN KEY (\"movie_id\") REFERENCES \"movies\" (\"id\") ON DELETE CASCADE ON UPDATE CASCADE )",
    "table": "actor_movies"
  },
  {
    "sql": "CREATE TABLE \"actors\" ( \"created_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"updated_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"id\" integer NOT NULL PRIMARY KEY AUTOINCREMENT, \"foobar\" varchar NULL )",
    "table": "actors"
  },
  {
    "sql": "CREATE TABLE \"awards\" ( \"created_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"updated_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"id\" integer NOT NULL PRIMARY KEY AUTOINCREMENT, \"name\" varchar NULL, \"actor_id\" integer NOT NULL, FOREIGN KEY (\"actor_id\") REFERENCES \"actors\" (\"id\") ON DELETE CASCADE ON UPDATE CASCADE )",
    "table": "awards"
  },
  {
    "sql": "CREATE TABLE \"movies\" ( \"created_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"updated_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"id\" integer NOT NULL PRIMARY KEY AUTOINCREMENT, \"string\" varchar NULL, \"string_nonull\" varchar NOT NULL, \"string_uniq\" varchar NOT NULL UNIQUE, \"text\" text NULL, \"text_nonull\" text NOT NULL, \"text_uniq\" text NOT NULL UNIQUE, \"uuid\" uuid_text NULL, \"uuid_nonull\" uuid_text NOT NULL, \"uuid_uniq\" uuid_text NOT NULL UNIQUE, \"bool\" boolean NULL, \"bool_nonull\" boolean NOT NULL, \"date\" date_text NULL, \"date_nonull\" date_text NOT NULL, \"date_uniq\" date_text NOT NULL UNIQUE, \"time\" time_text NULL, \"time_nonull\" time_text NOT NULL, \"time_uniq\" time_text NOT NULL UNIQUE, \"date_time\" datetime_text NULL, \"date_time_nonull\" datetime_text NOT NULL, \"date_time_uniq\" datetime_text NOT NULL UNIQUE, \"tstz\" timestamp_with_timezone_text NULL, \"tstz_nonull\" timestamp_with_timezone_text NOT NULL, \"json\" json_text NULL, \"json_nonull\" json_text NOT NULL, \"jsonb\" jsonb_text NULL, \"jsonb_nonull\" jsonb_text NOT NULL, \"jsonb_uniq\" jsonb_text NOT NULL UNIQUE, \"blob\" blob NULL, \"blob_nonull\" blob NOT NULL, \"blob_uniq\" blob NOT NULL UNIQUE, \"money\" real_money NULL, \"money_nonull\" real_money NOT NULL, \"money_uniq\" real_money NOT NULL UNIQUE, \"decimal\" real_decimal NULL, \"decimal_nonull\" real_decimal NOT NULL, \"decimal_uniq\" real_decimal NOT NULL UNIQUE, \"float\" float NULL, \"float_nonull\" float NOT NULL, \"float_uniq\" float NOT NULL UNIQUE, \"double\" double NULL, \"double_nonull\" double NOT NULL, \"double_uniq\" double NOT NULL UNIQUE, \"small_int\" smallint NULL, \"small_int_nonull\" smallint NOT NULL, \"small_int_uniq\" smallint NOT NULL UNIQUE, \"small_unsigned\" smallint NULL, \"small_unsigned_nonull\" smallint NOT NULL, \"small_unsigned_uniq\" smallint NOT NULL UNIQUE, \"unsigned\" integer NULL, \"unsigned_nonull\" integer NOT NULL, \"unsigned_uniq\" integer NOT NULL UNIQUE, \"int\" integer NULL, \"int_nonull\" integer NOT NULL, \"int_uniq\" integer NOT NULL UNIQUE, \"big_int\" integer NULL, \"big_int_nonull\" integer NOT NULL, \"big_int_uniq\" integer NOT NULL UNIQUE, \"age\" real(8, 24) NULL, \"age_nonull\" real(8, 24) NOT NULL, \"playlist_id\" integer NOT NULL, \"user_id\" integer NULL, \"rating\" integer NULL, FOREIGN KEY (\"playlist_id\") REFERENCES \"playlists\" (\"id\") ON DELETE CASCADE ON UPDATE CASCADE, FOREIGN KEY (\"user_id\") REFERENCES \"users\" (\"id\") ON DELETE SET NULL ON UPDATE NO ACTION )",
    "table": "movies"
  },
  {
    "sql": "CREATE TABLE \"playlists\" ( \"created_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"updated_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"id\" integer NOT NULL PRIMARY KEY AUTOINCREMENT, \"string\" varchar NULL, \"string_nonull\" varchar NOT NULL, \"string_uniq\" varchar NOT NULL UNIQUE, \"text\" text NULL, \"text_nonull\" text NOT NULL, \"text_uniq\" text NOT NULL UNIQUE, \"uuid\" uuid_text NULL, \"uuid_nonull\" uuid_text NOT NULL, \"uuid_uniq\" uuid_text NOT NULL UNIQUE, \"bool\" boolean NULL, \"bool_nonull\" boolean NOT NULL, \"date\" date_text NULL, \"date_nonull\" date_text NOT NULL, \"date_uniq\" date_text NOT NULL UNIQUE, \"time\" time_text NULL, \"time_nonull\" time_text NOT NULL, \"time_uniq\" time_text NOT NULL UNIQUE, \"date_time\" datetime_text NULL, \"date_time_nonull\" datetime_text NOT NULL, \"date_time_uniq\" datetime_text NOT NULL UNIQUE, \"tstz\" timestamp_with_timezone_text NULL, \"tstz_nonull\" timestamp_with_timezone_text NOT NULL, \"json\" json_text NULL, \"json_nonull\" json_text NOT NULL, \"jsonb\" jsonb_text NULL, \"jsonb_nonull\" jsonb_text NOT NULL, \"jsonb_uniq\" jsonb_text NOT NULL UNIQUE, \"blob\" blob NULL, \"blob_nonull\" blob NOT NULL, \"blob_uniq\" blob NOT NULL UNIQUE, \"money\" real_money NULL, \"money_nonull\" real_money NOT NULL, \"money_uniq\" real_money NOT NULL UNIQUE, \"decimal\" real_decimal NULL, \"decimal_nonull\" real_decimal NOT NULL, \"decimal_uniq\" real_decimal NOT NULL UNIQUE, \"float\" float NULL, \"float_nonull\" float NOT NULL, \"float_uniq\" float NOT NULL UNIQUE, \"double\" double NULL, \"double_nonull\" double NOT NULL, \"double_uniq\" double NOT NULL UNIQUE, \"small_int\" smallint NULL, \"small_int_nonull\" smallint NOT NULL, \"small_int_uniq\" smallint NOT NULL UNIQUE, \"small_unsigned\" smallint NULL, \"small_unsigned_nonull\" smallint NOT NULL, \"small_unsigned_uniq\" smallint NOT NULL UNIQUE, \"unsigned\" integer NULL, \"unsigned_nonull\" integer NOT NULL, \"unsigned_uniq\" integer NOT NULL UNIQUE, \"int\" integer NULL, \"int_nonull\" integer NOT NULL, \"int_uniq\" integer NOT NULL UNIQUE, \"big_int\" integer NULL, \"big_int_nonull\" integer NOT NULL, \"big_int_uniq\" integer NOT NULL UNIQUE, \"age\" real(8, 24) NULL, \"age_nonull\" real(8, 24) NOT NULL )",
    "table": "playlists"
  },
  {
    "sql": "CREATE TABLE \"playlists_without_tzs\" ( \"id\" integer NOT NULL PRIMARY KEY AUTOINCREMENT, \"string\" varchar NULL, \"string_nonull\" varchar NOT NULL, \"string_uniq\" varchar NOT NULL UNIQUE, \"text\" text NULL, \"text_nonull\" text NOT NULL, \"text_uniq\" text NOT NULL UNIQUE, \"uuid\" uuid_text NULL, \"uuid_nonull\" uuid_text NOT NULL, \"uuid_uniq\" uuid_text NOT NULL UNIQUE, \"bool\" boolean NULL, \"bool_nonull\" boolean NOT NULL, \"date\" date_text NULL, \"date_nonull\" date_text NOT NULL, \"date_uniq\" date_text NOT NULL UNIQUE, \"time\" time_text NULL, \"time_nonull\" time_text NOT NULL, \"time_uniq\" time_text NOT NULL UNIQUE, \"date_time\" datetime_text NULL, \"date_time_nonull\" datetime_text NOT NULL, \"date_time_uniq\" datetime_text NOT NULL UNIQUE, \"tstz\" timestamp_with_timezone_text NULL, \"tstz_nonull\" timestamp_with_timezone_text NOT NULL, \"json\" json_text NULL, \"json_nonull\" json_text NOT NULL, \"jsonb\" jsonb_text NULL, \"jsonb_nonull\" jsonb_text NOT NULL, \"jsonb_uniq\" jsonb_text NOT NULL UNIQUE, \"blob\" blob NULL, \"blob_nonull\" blob NOT NULL, \"blob_uniq\" blob NOT NULL UNIQUE, \"money\" real_money NULL, \"money_nonull\" real_money NOT NULL, \"money_uniq\" real_money NOT NULL UNIQUE, \"decimal\" real_decimal NULL, \"decimal_nonull\" real_decimal NOT NULL, \"decimal_uniq\" real_decimal NOT NULL UNIQUE, \"float\" float NULL, \"float_nonull\" float NOT NULL, \"float_uniq\" float NOT NULL UNIQUE, \"double\" double NULL, \"double_nonull\" double NOT NULL, \"double_uniq\" double NOT NULL UNIQUE, \"small_int\" smallint NULL, \"small_int_nonull\" smallint NOT NULL, \"small_int_uniq\" smallint NOT NULL UNIQUE, \"small_unsigned\" smallint NULL, \"small_unsigned_nonull\" smallint NOT NULL, \"small_unsigned_uniq\" smallint NOT NULL UNIQUE, \"unsigned\" integer NULL, \"unsigned_nonull\" integer NOT NULL, \"unsigned_uniq\" integer NOT NULL UNIQUE, \"int\" integer NULL, \"int_nonull\" integer NOT NULL, \"int_uniq\" integer NOT NULL UNIQUE, \"big_int\" integer NULL, \"big_int_nonull\" integer NOT NULL, \"big_int_uniq\" integer NOT NULL UNIQUE, \"age\" real(8, 24) NULL, \"age_nonull\" real(8, 24) NOT NULL )",
    "table": "playlists_without_tzs"
  },
  {
    "sql": "CREATE TABLE \"seaql_migrations\" ( \"version\" varchar NOT NULL PRIMARY KEY, \"applied_at\" integer NOT NULL )",
    "table": "seaql_migrations"
  },
  {
    "sql": "CREATE TABLE \"user_without_tz_movies\" ( \"minutes\" integer NULL, \"user_without_tz_id\" integer NOT NULL, \"movie_id\" integer NOT NULL, CONSTRAINT \"idx-user_without_tz_movies-refs-pk\" PRIMARY KEY (\"user_without_tz_id\", \"movie_id\"), FOREIGN KEY (\"user_without_tz_id\") REFERENCES \"user_without_tzs\" (\"id\") ON DELETE CASCADE ON UPDATE CASCADE, FOREIGN KEY (\"movie_id\") REFERENCES \"movies\" (\"id\") ON DELETE CASCADE ON UPDATE CASCADE )",
    "table": "user_without_tz_movies"
  },
  {
    "sql": "CREATE TABLE \"user_without_tzs\" ( \"id\" integer NOT NULL PRIMARY KEY AUTOINCREMENT, \"name\" varchar NULL )",
    "table": "user_without_tzs"
  },
  {
    "sql": "CREATE TABLE \"users\" ( \"created_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"updated_at\" timestamp_with_timezone_text NOT NULL DEFAULT CURRENT_TIMESTAMP, \"id\" integer NOT NULL PRIMARY KEY AUTOINCREMENT, \"pid\" uuid_text NOT NULL, \"email\" varchar NOT NULL UNIQUE, \"password\" varchar NOT NULL, \"api_key\" varchar NOT NULL UNIQUE, \"name\" varchar NOT NULL, \"reset_token\" varchar NULL, \"reset_sent_at\" timestamp_with_timezone_text NULL, \"email_verification_token\" varchar NULL, \"email_verification_sent_at\" timestamp_with_timezone_text NULL, \"email_verified_at\" timestamp_with_timezone_text NULL, \"magic_link_token\" varchar NULL, \"magic_link_expiration\" timestamp_with_timezone_text NULL )",
    "table": "users"
  }
]
